# arcadocs

./: README.md  TODO  arca_docs_server.py  family_organizer.html  index.html  main.py  pyproject.toml
core/: database.py  manager.py  security.py
core/handlers/: AnonymizedRedactor.py  HybridRedactor.py  PDFRedactionSuite.py  PDFRedactor.py  PDFVerifier.py
core/processors/: PDFprocessingPipeline1
