[project]
name = "repoarch-backend"
version = "0.1.0"
description = "A FastAPI backend for the Archival Repository Manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"fastapi>=0.109.0",
"uvicorn[standard]>=0.27.0",
"pydantic>=2.6.0",
"cryptography>=42.0.0",
"pikepdf>=10.0.0",
]

[project.optional-dependencies]
dev = [
"pytest>=8.0.0",
"httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true